force-app/main/default/objects/Opportunity/fields/Account_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Account_Receivable__c</fullName>
    <formula>Premium_Amount__c -  Retail_Commission__c +  Transaction_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount receivable from the brokerage (Gross Amount - Retail Commission + Transaction Fees)</inlineHelpText>
    <label>Account Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>