force-app/main/default/objects/Opportunity/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <formula>Premium_Amount__c-(Discount_Percentage__c * Premium_Amount__c)+  Transaction_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross amount that will be collected from customer (premium * discount percentage + transaction fees)</inlineHelpText>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>