force-app/main/default/objects/Opportunity/fields/Master_Policy_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Master_Policy_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Quote of a renewal opportunity</inlineHelpText>
    <label>Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote2__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Renewal Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>