force-app/main/default/objects/Opportunity/fields/Opp_Insurer_Created__c.field-meta.xml
<CustomField>
    <fullName>Opp_Insurer_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp Insurer Created</label>
    <type>Checkbox</type>
</CustomField>