force-app/main/default/objects/Opportunity/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <inlineHelpText>Basic premium amount of a policy</inlineHelpText>
    <label>Authorized Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>