force-app/main/default/objects/Opportunity/fields/Retail_Commission__c.field-meta.xml
<CustomField>
    <fullName>Retail_Commission__c</fullName>
    <formula>Premium_Amount__c   *  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retail Commission of a brokerage ( MGA Commission Amount * Commission Percentage)</inlineHelpText>
    <label>Retail Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>