force-app/main/default/objects/Opportunity/fields/Retail_Commission_Currency__c.field-meta.xml
<CustomField>
    <fullName>Retail_Commission_Currency__c</fullName>
    <inlineHelpText>Hidden field to store retail commission</inlineHelpText>
    <label>Retail Commission Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>