force-app/main/default/objects/Opportunity/fields/Total_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Total_Insurer__c</fullName>
    <formula>Premium_Amount__c  -  Total_MGA_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount allocated to related insurers</inlineHelpText>
    <label>Total Insurer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>