force-app/main/default/objects/Opportunity/fields/Total_MGA_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_MGA_Commission__c</fullName>
    <label>Total MGA Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>