force-app/main/default/objects/Opportunity/fields/Total_MGA_Commission_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_MGA_Commission_formula__c</fullName>
    <formula>Total_MGA_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of MGA Commission provided by related insurer</inlineHelpText>
    <label>Total MGA Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>