force-app/main/default/objects/Opportunity/fields/Transaction_Fees__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fees__c</fullName>
    <inlineHelpText>Fixed transaction fees to be charged from customer</inlineHelpText>
    <label>Transaction Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>