force-app/main/default/objects/Opportunity/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate Cancellation</fullName>
                <label>Policy Cancellation</label>
            </value>
            <value>
                <fullName>Firm Rider Certificate Cancellation</fullName>
            </value>
            <value>
                <fullName>Mid-Term Change</fullName>
            </value>
            <value>
                <fullName>New Certificate</fullName>
            </value>
            <value>
                <fullName>Purchase ERP</fullName>
            </value>
            <value>
                <fullName>Renew Certificate</fullName>
                <label>Policy Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>