force-app/main/default/objects/Opportunity/fields/Unearned_Premium_del__c.field-meta.xml
<CustomField>
    <fullName>Unearned_Premium_del__c</fullName>
    <formula>Policy__r.PremiumAmount / 12 * (MONTH(  DATEVALUE(Policy__r.ExpirationDate)  ) -  MONTH( TODAY() )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unearned Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>