force-app/main/default/objects/Opportunity/recordTypes/New_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>New_Opportunity</fullName>
    <active>true</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <description>To store information of a new corporation that comes in the Sales Pipeline.</description>
    <label>New Opportunity</label>
</RecordType>