force-app/main/default/objects/Opportunity/recordTypes/Renewal_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Opportunity</fullName>
    <active>true</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <description>To store information of Renewal occurs for a Master Policy Agreement.</description>
    <label>Renewal Opportunity</label>
</RecordType>