force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Brokerage__c</columns>
    <columns>Premium_Amount__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Net_Revenue__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Line_of_Business__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.New_Opportunity,Opportunity.FinServ__WalletShareOpportunity,Opportunity.Renewal_Opportunity</value>
    </filters>
    <label>All Opportunities</label>
</ListView>